[package]
name = "raft-engine-strings"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["std"] }
greptime-proto = { git = "https://github.com/GreptimeTeam/greptime-proto" }
prost = "0.14"
raft-engine = { path = "raft-engine" }
serde_json = "1.0"

[dev-dependencies]
protobuf = "2"
raft = { git = "https://github.com/tikv/raft-rs", branch = "master", default-features = false, features = [
    "protobuf-codec",
] }
tempfile = "3.6"
