[package]
name = "raft-engine-strings"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["std"] }
greptime-proto = { git = "https://github.com/GreptimeTeam/greptime-proto" }
prost = "0.14"
raft-engine = { git = "https://github.com/v0y4g3r/raft-engine", branch = "expose-raw-entry-bytes" }
serde_json = "1.0"

[dev-dependencies]
protobuf = "2"
raft = { git = "https://github.com/tikv/raft-rs", branch = "master", default-features = false, features = [
    "protobuf-codec",
] }
tempfile = "3.6"
